feat(server): relying on cookies for authing
